# gchat

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  gif_defns.h  jiangxin_install.sh  jiangxin_rm.sh  module.mm
.github/workflows/: BuildAndRelease.yml
client/: callbacks.c  callbacks.h  client.cbp  client.depend  client.layout  config.h.in~  gif_defns.h  interface.c  interface.h  main.c  main.h  support.c  support.h
common/: common.c  common.h
doc/: gchat_protocol.txt  lesson3.ppt  module.mm
gchat_client/: Makefile  Makefile.am  Makefile.bak  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.in  gif_defns.c  gifclient.glade  gifclient.gladep  jiangxin_install.sh  jiangxin_rm.sh
gchat_client/autom4te-2.53.cache/: output.0  requests  traces.0
gchat_client/autom4te.cache/: output.0  requests  traces.0  traces.1
gchat_client/po/: Makefile  Makefile.in
gchat_client/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  gchat  gif_defns.c  interface.c  interface.h  main.c  support.c
gchat_client/src/.deps/: callbacks.Po  interface.Po  main.Po  support.Po
gchat_server/: Makefile  README  adduser  adduser.c  gchat_server  gchat_server.c  users.db
material/: 111150034_lab03.doc  MSN_Messenger_Service_1.0_Protocol.txt  Yahoo_Messenger_Protocol_v9.txt  lesson3.ppt
server/: README  adduser.c  gif_defns.c  gif_defns.h  gif_handle.c  main.c  main.h  server.cbp  server.depend  server.layout  support.c  support.h  user_handle.c  user_handle.h
server/db/: online.db  users.db
src/client/: callbacks.c  interface.c  main.c  main.h  support.c
src/common/: common.c  common.h
src/server/: main.c  main.h  support.c  user_handle.c
